# test-oals-actions-build

./: README.md
.github/workflows/: main.yml
cmakevardump/: CMakeLists.txt  hello.c
